# buratino

./: .gitignore  Makefile  deep_last.sh  diagram.drawio  play.py  pyproject.toml  requirements.txt  trace_events.json
src/: coordinator.py  event_bus.py  gen_tts.py  prompts.py  replay.py  rtc_server.py  server.py  tools.py
src/chat/: __init__.py  context.py  message.py
src/static/: client.js  index.html  main.js  rtc.html
src/static/st/: client.js  style.css
src/tracks/: stt_track.py  tts_openai.py  tts_track.py  vad_info.py
src/utils/: event_bus.py  lang.py  ogg_processor.py
src/workers/: base.py  event_tracer.py  llm.py  stt.py  tts.py  vad.py  vad2.py
